# dante

./: .gitignore  LANDING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: assertions-smoke.mts  dataset-smoke.mts  extract-smoke.mts  generate-data-smoke.mts  generate-smoke.mts  make-icons.ps1  review-smoke.mts  script-blocks-smoke.mts  template-fns-smoke.mts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  mock.rs  monitors.rs  script.rs  sigv4.rs  ws.rs
src/lib/: AiReviewPanel.svelte  Editor.svelte  GeneratePanel.svelte  api.ts  assertions.ts  curl.ts  dataset.ts  extract.ts  generate.ts  review.ts  script-blocks.ts  substitute.ts  types.ts
