[package]
name = "dante"
version = "0.1.0"
description = "Paste a curl. Get a runnable, named, versioned request."
authors = ["Dante contributors"]
edition = "2021"
license = "MIT"
default-run = "dante"

[lib]
name = "dante_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dante-run"
path = "src/bin/dante-run.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
percent-encoding = "2"
tiny_http = "0.12"
url = "2"
base64 = "0.22"
webbrowser = "1"
getrandom = "0.2"
md-5 = "0.10"
boa_engine = "0.20"
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "rustls-tls-native-roots"], default-features = false }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "deflate", "cookies"], default-features = false }
reqwest_cookie_store = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
